# lvd-rs

./: .gitignore  Cargo.toml  README.md  diagram.json  wokwi.toml
.devcontainer/: devcontainer.json
src/: lcd.rs  led.rs  main.rs  moister.rs  moisture.rs  pump.rs
